[package]
name = "compiler"
version = "0.0.1"
edition = "2021"

[build-dependencies]
lalrpop = { version = "0.20.0", default-features = false }

[dependencies]
anyhow = "1.0.75"
logos = "0.13.0"
logos-derive = "0.13.0"
lalrpop-util = "0.20.0"
annotate-snippets = { version = "0.9.1", features = ["color"] }