[package]
name = "polylamb"
version = "0.0.1"
edition = "2021"

[build-dependencies]
lalrpop = { version = "0.20.0", default-features = false }

[dependencies]
colored = "2"
logos = "0.13.0"
logos-derive = "0.13.0"
lalrpop-util = "0.20.0"
rustyline = "12.0.0"
im = "15.1.0"
annotate-snippets = { version = "0.9.1", features = ["color"] }

[profile.dev]
overflow-checks = false